--- a/src/components/commons/styles.module.css
+++ b/src/components/commons/styles.module.css
@@ -200,3 +200,30 @@
     height: 200px;
   }
 }
+
+/* 이미지 업로드 버튼 */
+/* upload_button_group, delete_btn, btn_upload */
+
+.upload_button_group {
+  position: relative;
+}
+
+.delete_btn {
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  display: none;
+  cursor: pointer;
+}
+
+.btn_upload {
+  cursor: pointer;
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.btn_upload input {
+  display: none;
+}
