--- a/src/components/products-write/styles.module.css
+++ b/src/components/products-write/styles.module.css
@@ -102,3 +102,27 @@
 .btn_upload input {
   display: none;
 }
+
+/* 해시태그 */
+.tag_input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin: 8px 0;
+}
+
+.tag {
+  color: var(--main-color);
+  font-size: 0.8rem;
+  font-weight: 500;
+  background-color: var(--main-color-back);
+  padding: 4px 8px;
+  border-radius: 12px;
+}
