--- a/src/commons/ui/input/styles.module.css
+++ b/src/commons/ui/input/styles.module.css
@@ -4,3 +4,21 @@
   border-radius: 8px;
   border: 1px solid #d4d3d3;
 }
+
+.input__soft__m__full:disabled {
+  background: #f2f2f2;
+  border: none;
+}
+
+.input__soft__m__s {
+  padding: 12px 16px;
+  flex-direction: column;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  width: 82px;
+}
+
+.input__soft__m__s:disabled {
+  background: #f2f2f2;
+  border: none;
+}
