--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --main-color: #ce5f5f;
-  --main-color-hover: #cb4747;
-  --main-color-back: #fff5f5;
+  /* --main-color: #ce5f5f; */
+  /* --main-color-hover: #cb4747;
+  --main-color-back: #fff5f5; */
+
+  --main-color: #00af98;
+  --main-color-hover: #00917e;
+  --main-color-back: #e6fffb;
   --gray: #757575;
   --border: #d1d1d1;
   /* --sub-color:  */
