--- a/src/commons/ui/button/styles.module.css
+++ b/src/commons/ui/button/styles.module.css
@@ -3,8 +3,9 @@
   background-color: var(--main-color);
   color: white;
   border: none;
-  padding: 8px 16px;
+  padding: 12px 16px;
   border-radius: 8px;
+  font-weight: 600;
   cursor: pointer;
   font-size: 18px;
   transition: all 0.3s ease;
@@ -13,7 +14,7 @@
 .button__soft__m__fit__main {
   display: flex;
   white-space: nowrap;
-  padding: 8px 16px;
+  padding: 12px 16px;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -21,19 +22,22 @@
   background-color: var(--main-color);
   color: white;
   cursor: pointer;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 600;
   border: none;
   transition: all 0.3s ease;
 }
 
 .button__soft__m__fit__border {
   display: flex;
-  padding: 8px 16px;
+  padding: 12px 16px;
   align-items: center;
   border-radius: 8px;
   border: 1px solid var(--main-color);
   background: white;
-  font-weight: 500;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
   color: var(--main-color);
 }
 
