--- a/src/commons/ui/textarea/styles.module.css
+++ b/src/commons/ui/textarea/styles.module.css
@@ -6,3 +6,14 @@
   resize: none;
   overflow: auto;
 }
+
+/* 문의하기 */
+.textarea__soft__s__full {
+  display: flex;
+  width: 100%;
+  height: 144px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  margin-bottom: 16px;
+}
