--- a/src/components/products-list/styles.module.css
+++ b/src/components/products-list/styles.module.css
@@ -55,6 +55,10 @@
   border-radius: 20px;
 }
 
+.service_image {
+  object-fit: cover;
+}
+
 .top3_content,
 .service_content {
   padding-top: 16px;
